@@ -1,3 +1,6 @@
+2009-01-22 yusei
+* Added bank_account_type category and use it in BankAccount_view.
+
 2008-12-17 nicolas
 * add Day Movement Group portal_type
 
